Adjust tests