@@ -1,36 +1,37 @@
 package com.mamotec.energycontrolbackend.domain.group;
 
 import com.mamotec.energycontrolbackend.domain.device.DeviceType;
-import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.Getter;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import static com.mamotec.energycontrolbackend.domain.device.DeviceType.*;
-
-@Schema(description = "Die Gruppen Typen")
 @Getter
 public enum DeviceGroupType {
 
-    PLANT(INVERTER, HYBRID_INVERTER),
-    CHARGING_STATION(DeviceType.CHARGING_STATION),
-    HEAT_PUMP(DeviceType.HEAT_PUMP),
-    BATTERY(DeviceType.BATTERY),
-    HOME(HYBRID_INVERTER);
+    PLANT,
+    CHARGING_STATION,
+    HEAT_PUMP,
+    BATTERY,
+    HOME;
 
-    private final List<DeviceType> validDeviceTypes;
-
-    DeviceGroupType(DeviceType... types) {
-        validDeviceTypes = Arrays.asList(types);
+    static {
+        PLANT.setValidDeviceTypes(Arrays.asList(DeviceType.INVERTER, DeviceType.HYBRID_INVERTER));
+        CHARGING_STATION.setValidDeviceTypes(List.of(DeviceType.CHARGING_STATION));
+        HEAT_PUMP.setValidDeviceTypes(List.of(DeviceType.HEAT_PUMP));
+        BATTERY.setValidDeviceTypes(List.of(DeviceType.BATTERY));
+        HOME.setValidDeviceTypes(List.of(DeviceType.HYBRID_INVERTER));
     }
 
-    public String getDeviceGroupType(DeviceGroupType type) {
-        return type.toString();
-    }
+    final List<DeviceType> validDeviceTypes = new ArrayList<>();
 
     public boolean canAddDeviceToGroup(DeviceType type) {
         return validDeviceTypes.contains(type);
+    }
+
+    private void setValidDeviceTypes(List<DeviceType> validDeviceTypes) {
+        this.validDeviceTypes.addAll(validDeviceTypes);
     }
 
 }
